--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "expo": {
+   "expo": {
     "name": "snapchamp-clean",
     "slug": "snapchamp-clean",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "jsEngine": "hermes",
+    "jsEngine": "jsc",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -21,7 +21,7 @@
       }
     },
     "android": {
-      "hermes": true,
+      "hermesEnabled": false,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -35,6 +35,13 @@
       "eas": {
         "projectId": "40c3c40b-fb5e-4d38-a8f8-26232b65575d"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/40c3c40b-fb5e-4d38-a8f8-26232b65575d"
     }
   }
 }
+
