--- a/eas.json
+++ b/eas.json
@@ -20,6 +20,8 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "appleId": "niclas.seevers@icloud.com"
+    }
   }
 }
