--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native-stack": "^7.3.16",
     "base-64": "^1.0.0",
     "expo-av": "~15.1.6",
-    "expo-dev-client": "~5.2.2",
+    "expo-dev-client": "~5.2.3",
     "expo-file-system": "~18.1.10",
     "expo-image-picker": "~16.1.4",
     "expo-modules-autolinking": "~2.1.0",
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-uuid": "^2.0.3"
+    "react-native-uuid": "^2.0.3",
+    "expo-updates": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
