--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-image-picker": "~16.1.4",
     "expo-modules-autolinking": "~2.1.0",
     "expo-status-bar": "~2.2.3",
-    "firebase": "9.22.2",
+    "expo-updates": "~0.28.15",
+    "@react-native-async-storage/async-storage": "^1.20.2",
     "mime": "^4.0.7",
     "react": "19.0.0",
     "react-native": "0.79.4",
@@ -28,8 +29,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-uuid": "^2.0.3",
-    "expo-updates": "~0.28.15"
+    "react-native-uuid": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,3 +37,4 @@
   },
   "private": true
 }
+
