--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.20.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.16",
@@ -20,7 +21,7 @@
     "expo-modules-autolinking": "~2.1.0",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.15",
-    "@react-native-async-storage/async-storage": "^1.20.2",
+    "firebase": "^11.10.0",
     "mime": "^4.0.7",
     "react": "19.0.0",
     "react-native": "0.79.4",
@@ -37,4 +38,3 @@
   },
   "private": true
 }
-
